# nesrs

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml  test.yml
examples/: mashin.rs
nesrs-bin/: Cargo.toml
nesrs-bin/src/: gui.rs
rom/instr_test-v5/source/: build.sh
rom/instr_test-v5/source/common/: build_rom.s  console.s  delay.s
rom/test/: 6502_test.s  Makefile  test.cfg  test.s
scripts/: generate-implementation.js  opcodes.json  package-lock.json  package.json
scripts/documentations/: brk.md  inc.md  jmp.md  lda.md  ldx.md
src/: bus.rs  cartridge.rs  controller.rs  cpu.rs  gui.rs  lib.rs  macros.rs  main.rs  mappers.rs  memory.rs  ppu.rs  utils.rs
src/cpu/: addressing_mode.rs  addressings.rs  clock.rs  instructions.rs  macros.rs  opcodes.rs  types.rs
src/mappers/: nrom.rs
tests/: 01-basic.rs  02-implied.rs  03-immediate.rs  04-zero_page.rs  05-zp_xy.rs  06-absolute.rs  07-abs_xy.rs  08-ind_x.rs  09-ind_y.rs  10-branches.rs  11-stack.rs  12-jmp_jsr.rs  13-rts.rs  14-rti.rs  15-brk.rs  16-special.rs  addresing_modes.rs  addressings.rs  asl.rs  cpu.rs  inc.rs  lda.rs  ldx.rs  lib.rs  test.rs  test_utils.rs  testlist.yml
tests/instr_test/: 01-basics.nes  10-branches.nes  11-stack.nes  12-jmp_jsr.nes  13-rts.nes  14-rti.nes  15-brk.nes  16-special.nes  basic.rs  immediate.rs  implied.rs  tests.rs
