[package]
name = "nesrs"
version = "0.1.0"
authors = ["Rahadian Yusuf <rahadian.y@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
modular-bitfield = "0.11.2"
bitvec = "0.20"

[target.'cfg(target_arch = "x86_64")'.dependencies]
colored = "2"
font-kit = "0.10.1"

[target.'cfg(target_arch = "x86_64")'.dependencies.sdl2]
version = "0.33"
default-features = false
features = ["ttf"]
