[package]
name = "nesrs-bin"
version = "0.1.0"
authors = ["Rahadian Yusuf <rahadian.y@gmail.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nesrs = { path = ".." }
colored = "2"
font-kit = "0.10.1"
egui = "0.13"
egui_wgpu_backend = "0.10"
egui_winit_platform = { version = "0.9", features = ["webbrowser"] }
env_logger = "0.8"
log = "0.4"
native-dialog = "0.5.5"
winit = "0.25"
winit_input_helper = "0.10"

[dependencies.pixels]
git = "https://github.com/parasyte/pixels.git"
rev = "ce549a79b69ecaaf325552b5a56fdcdaaa530f3b"
